# FastqIndEx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  TODOs.txt  createBuildDir.sh  installerCommands.sh
env/: environment.yml
src/: ActualRunner.cpp  ActualRunner.h  BaseExtractor.h  CMakeLists.txt  CommonStructs.h  CommonStructsAndConstants.cpp  CommonStructsAndConstants.h  ErrorAccumulator.cpp  ErrorAccumulator.h  ErrorMessages.cpp  ErrorMessages.h  Extractor.cpp  Extractor.h  ExtractorRunner.cpp  ExtractorRunner.h  IndexProcessor.cpp  IndexProcessor.h  IndexReader.cpp  IndexReader.h  IndexStatsRunner.cpp  IndexStatsRunner.h  IndexWriter.cpp  IndexWriter.h  Indexer.cpp  Indexer.h  IndexerRunner.cpp  IndexerRunner.h  InputSource.cpp  InputSource.h  PathInputSource.cpp  PathInputSource.h  Runner.cpp  Runner.h  Starter.cpp  Starter.h  StreamInputSource.cpp  StreamInputSource.h  ZLibBasedFASTQProcessorBaseClass.cpp  ZLibBasedFASTQProcessorBaseClass.h  main.cpp  (+2 more)
src/common/: CommonStructsAndConstants.cpp  CommonStructsAndConstants.h  ErrorAccumulator.cpp  ErrorAccumulator.h  ErrorMessages.cpp  IOHelper.cpp  IOHelper.h  IndexEntry.h  IndexEntryV1.cpp  IndexEntryV1.h  IndexHeader.h  Result.h  StringHelper.cpp  StringHelper.h
src/process/base/: BaseIndexEntry.h  IndexEntry.cpp  IndexEntry.h  IndexEntryV1.h  IndexHeader.cpp  IndexHeader.h  IndexProcessor.h  ZLibBasedFASTQProcessorBaseClass.cpp  ZLibBasedFASTQProcessorBaseClass.h
src/process/extract/: Extractor.cpp  Extractor.h  IndexReader.cpp  IndexReader.h
src/process/index/: IndexEntryStorageDecisionStrategy.h  IndexEntryStorageStrategy.h  IndexWriter.cpp  IndexWriter.h  Indexer.cpp  Indexer.h
src/process/io/: ConsoleSink.h  FileSink.cpp  FileSink.h  FileSource.cpp  FileSource.h  IOBase.h  InputSource.h  PathInputSource.cpp  PathSink.cpp  PathSink.h  PathSource.cpp  PathSource.h  S3Config.cpp  S3Config.h  S3InputSource.cpp  S3InputSource.h  Sink.h  Source.h  StreamInputSource.cpp  StreamInputSource.h  StreamSource.cpp  StreamSource.h
src/process/io/locks/: FileLockHandler.cpp  FileLockHandler.h  LockHandler.h  PathLockHandler.cpp  PathLockHandler.h  S3LockHandler.h
src/process/io/s3/: FQIS3Client.h  S3Config.cpp  S3Config.h  S3GetObjectProcessWrapper.cpp  S3GetObjectProcessWrapper.h  S3Service.cpp  S3Service.h  S3ServiceOptions.h  S3Sink.h  S3Source.cpp  S3Source.h
src/runners/: ActualRunner.cpp  ActualRunner.h  DoNothingRunner.cpp  DoNothingRunner.h  ExtractorRunner.cpp  ExtractorRunner.h  IndexReadingRunner.h  IndexStatsRunner.cpp  IndexStatsRunner.h  IndexWritingRunner.h  IndexerRunner.cpp  IndexerRunner.h  PrintCLIOptions.cpp  PrintCLIOptions.h  Runner.cpp  Runner.h  S3TestRunner.h
src/startup/: ExtractModeCLIParser.cpp  ExtractModeCLIParser.h  IndexModeCLIParser.cpp  IndexModeCLIParser.h  IndexStatsModeCLIParser.h  ModeCLIParser.cpp  ModeCLIParser.h  S3TestModeCLIParser.h  Starter.cpp  Starter.h
test/: ActualRunnerTest.cpp  CMakeLists.txt  CommonStructsTest.cpp  ExtractorRunnerTest.cpp  ExtractorTest.cpp  IOHelperTest.cpp  IndexProcessorTest.cpp  IndexReaderTest.cpp  IndexWriterTest.cpp  IndexerRunnerTest.cpp  IndexerTest.cpp  InputSourceTest.cpp  IntegrationTests.cpp  S3ConfigTest.cpp  ShowStopperRunnerTest.cpp  StarterTest.cpp  StringHelperTest.cpp  TestConstants.cpp  TestConstants.h  TestResourcesAndFunctions.cpp  TestResourcesAndFunctions.h  TestResourcesAndFunctionsTest.cpp  ZLibBasedFASTQProcessorBaseClassTest.cpp  main.cpp
test/common/: CommonStructsTest.cpp  CommonStuffTest.cpp  IOHelperTest.cpp  ResultTest.cpp  StringHelperTest.cpp
test/process/base/: IndexHeaderAndEntriesTests.cpp  ZLibBasedFASTQProcessorBaseClassTest.cpp
test/process/extract/: ExtractorTest.cpp  IndexReaderTest.cpp
test/process/index/: IndexEntryStorageStrategyTest.cpp  IndexWriterTest.cpp  IndexerTest.cpp
test/process/io/: ConsoleSinkTest.cpp  FileSinkTest.cpp  FileSourceTest.cpp  PathSinkTest.cpp  PathSourceTest.cpp  SourceTest.cpp  StreamSourceTest.cpp
test/process/io/locks/: LockHandlerTest.cpp
test/process/io/s3/: FQIS3TestClient.h  FQIS3TestClientTests.cpp  S3ConfigTest.cpp  S3ServiceTest.cpp  S3SinkTest.cpp  S3SourceTest.cpp
test/resources/: TestTextFile.txt  awsConfigExample  awsCredentialsExample  test.fastq.gz.fqi_v1  test.fastq.gz.idx_v1  test2.fastq.gz.idx_v1
test/resources/blockAndLineCalculations/: block_0_complete  block_1_endopen  block_2_startendopen  block_3_startendopen  block_4_startopen  block_7_finalwonewlines  testlayout
test/runners/: ActualRunnerTest.cpp  ExtractorRunnerTest.cpp  IndexStatsRunnerTest.cpp  IndexerRunnerTest.cpp  ShowStopperRunnerTest.cpp
test/scripts/: fqimasstestLSF.sh  fqitest.sh
test/startup/: ModeCLIParserTest.cpp  StarterTest.cpp
